open_issues/gcc: Switch to upstream sources

--- a/open_issues/gnat.mdwn
+++ b/open_issues/gnat.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2011, 2012, 2013 Free Software Foundation,
-Inc."]]
+[[!meta copyright="Copyright © 2011, 2012, 2013, 2016 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -24,6 +24,9 @@ There is a [[!FF_project 259]][[!tag bounty]] on this task.
 # Part I
 
 First, make the language functional, have its test suite pass without errors.
+
+Using, for example, the build instructions from [[GCC]], you'll need to add
+`ada` to `--enable-languages`.
 
 
 ## Original [[community/GSoC]] Task Description
@@ -150,6 +153,13 @@ f6568ea476aa52a6e23c6db43b3e240cde55783a (2013-04-26).
     gcc/ada/s-osinte-solaris.ads:      uc_stack     : record_type_2;
     gcc/ada/s-taprop-linux.adb:            Stack.ss_sp    := Self_ID.Common.Task_Alternate_Stack;
     gcc/ada/s-taprop-posix.adb:            Stack.ss_sp    := Self_ID.Common.Task_Alternate_Stack;
+
+
+## TODO
+
+GCC includes (TODO: some version of) the Ada Conformity Assessment Test Suite
+(ACATS), <http://ada-auth.org/acats.html>.  Additional tests to be found at
+<http://ada-auth.org/submit.html>.  TODO: results?
 
 
 ---
