--- a/open_issues/gcc.mdwn
+++ b/open_issues/gcc.mdwn
@@ -23,9 +23,6 @@ example.  Especially all the compiler magic is all the same.
 # [[General information|/gcc]]
 
 
-# [[Sources|source_repositories/gcc]]
-
-
 # Configuration
 
 <!--
@@ -37,8 +34,8 @@ git diff --patience --stat=$COLUMNS,$COLUMNS --patch --src-prefix=./ --dst-prefi
 
 -->
 
-Last reviewed up to the [[Git mirror's c16b7ed55398d2ea55d9ab35519f20cc053b9d0a
-(2015-01-19) sources|source_repositories/gcc]].
+Last reviewed up to the Git mirror's commit
+c16b7ed55398d2ea55d9ab35519f20cc053b9d0a (2015-01-19).
 
 <http://gcc.gnu.org/install/configure.html> has documentation for the
 `configure` switches.
@@ -395,7 +392,7 @@ Last reviewed up to the [[Git mirror's c16b7ed55398d2ea55d9ab35519f20cc053b9d0a
 
   * `gcc/ada` (not all reviewed)
 
-      * [[Ada (GNAT)|GNAT]] support is work in progress.
+      * [[Ada (GNAT)|gnat]] support is work in progress.
 
   * `gcc/go`, `gcc/testsuite/go.test`, `libgo` (not reviewed)
 
@@ -771,25 +768,27 @@ Last reviewed up to the [[Git mirror's c16b7ed55398d2ea55d9ab35519f20cc053b9d0a
 
 # Build
 
-Here's a log of a GCC build run; this is from our [[Git repository's
-91049a6f433bd5b425144d2c71245df9ec99aa8f (2015-01-20;
-c16b7ed55398d2ea55d9ab35519f20cc053b9d0a (2015-01-19))
-sources|source_repositories/gcc]], with
+Here's a log of a GCC build run; this is from Git commit
+c16b7ed55398d2ea55d9ab35519f20cc053b9d0a (2015-01-19), with
 b68b3d9d07b2e31cc592ef231a6b963192ae81b6 cherry-picked on laplace.SCHWINGE, run
 on kepler.SCHWINGE and laplace.SCHWINGE.
 
     $ export LC_ALL=C
     $ (cd ../master/ && contrib/gcc_update --touch)
-    $ ../master/configure --prefix="$PWD".install SHELL=/bin/dash CC=gcc-4.9 CXX=g++-4.9 --enable-languages=all,ada 2>&1 | tee log_build
+    $ ../master/configure --prefix="$PWD".install SHELL=/bin/dash CC=gcc-4.9 CXX=g++-4.9 --enable-languages=all --disable-libcilkrts --with-native-system-header-dir=/usr/include --enable-multiarch 2>&1 | tee log_build
     [...]
     $ make 2>&1 | tee log_build_
     [...]
 
 Different hosts may default to different shells and compiler versions; thus
 harmonized.
+`--disable-libcilkrts` until that is auto-detected/fixed for GNU Hurd.
+`--with-native-system-header-dir=/usr/include` because GCC still defaults to
+`/include` for GNU Hurd.  Explicit `--enable-multiarch` because *auto check [is
+disabled if] configured with --native-system-header-dir*.
 
-This takes up around 4.9 GiB, and runs for [[6 h 09 min|performance#measure]]
-on kepler.SCHWINGE and [[4 h 28 min|performance#measure]] on laplace.SCHWINGE.
+This takes up around 4.3 GiB, and runs for [[4 h 37 min|performance#measure]]
+on kepler.SCHWINGE and [[3 h 42 min|performance#measure]] on laplace.SCHWINGE.
 
 <!--
 
@@ -944,7 +943,7 @@ on kepler.SCHWINGE and [[4 h 28 min|performance#measure]] on laplace.SCHWINGE.
     $ make install 2>&1 | tee log_install
     [...]
 
-This takes up around 1.4 GiB, and runs for [[4 min|performance#measure]] on
+This takes up around 1.4 GiB, and runs for [[2 min|performance#measure]] on
 kepler.SCHWINGE and [[5 min|performance#measure]] on laplace.SCHWINGE.
 
 
@@ -970,8 +969,8 @@ kepler.SCHWINGE and [[5 min|performance#measure]] on laplace.SCHWINGE.
     $ make -k check 2>&1 | tee log_test
     [...]
 
-This runs for [[11 h 55 min|performance#measure]] on kepler.SCHWINGE and [[11 h
-33 min|performance#measure]] on laplace.SCHWINGE.
+This runs for [[7 h 3 min|performance#measure]] on kepler.SCHWINGE and [[10 h
+19 min|performance#measure]] on laplace.SCHWINGE.
 
 
 ## Analysis
@@ -1270,6 +1269,9 @@ This runs for [[11 h 55 min|performance#measure]] on kepler.SCHWINGE and [[11 h
   * Timeout problems
 
     2015-11-03
+
+    With work-in-progress [[Ada (GNAT)|gnat]] support (but that's not relevant
+    here).
 
         splitting /home/thomas/tmp/gcc/hurd/master.build/gcc/testsuite/ada/acats/tests/cb/cb1010a.ada into:
            cb1010a.adb
