--- a/source_repositories.mdwn
+++ b/source_repositories.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014
-Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2007, 2008, 2009, 2010, 2011, 2012, 2013, 2014,
+2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -254,13 +254,6 @@ For example, [[Thomas Schwinge|tschwinge]] has a checkout of
 really need to, you can clone it like this:
 
     $ git clone git://flubber.bddebian.com/~tschwinge/tmp/hurd/libpthread
-
-
-# Git repositories on grubber
-
-## List of Interesting Repositories
-
-  * [[GCC]]
 
 
 # Debian Git repositories
