Prepare for gsoc 2016

--- a/community/gsoc.mdwn
+++ b/community/gsoc.mdwn
@@ -20,16 +20,21 @@ We're in!  The GNU Hurd project is again participating in the [Google Summer of
 Code](http://www.google-melange.com/) under the [GNU
 umbrella](http://www.gnu.org/software/soc-projects/).
 
+<!--
 This year's *student application period* is over.  Thanks for sending in your
 applications!  We're now reviewing and discussing these, so please pay
 attention to any questions posted on your proposal's page.  The Google site's
 notification system should be sending out emails, too.
+-->
 
-Per the [Google Summer of Code 2015 Program
-Timeline](http://www.google-melange.com/gsoc/events/google/gsoc2015),
+Per the [Google Summer of Code 2016 Program
+Timeline](https://summerofcode.withgoogle.com/),
+we are awaiting for the approval of GNU as a mentoring organization.
+<!--
 we're now waiting for Google to announce the number of slots that the whole GNU
 project gets, and we'll be discussing with our GNU peers about how to split
 these up among all the GNU subprojects.
+-->
 <!--
 from 2015-03-16 to 2015-03-27, it's the *student application period*, which
 is plenty of time for preparing and discussing your applications -- but please
