--- a/open_issues/gcc.mdwn
+++ b/open_issues/gcc.mdwn
@@ -1065,20 +1065,24 @@ and laplace.SCHWINGE.
 
     $ export LC_ALL=C
     $ (cd ../master/ && contrib/gcc_update --touch)
-    $ ../master/configure --prefix="$PWD".install SHELL=/bin/dash CC=gcc-4.9 CXX=g++-4.9 --enable-languages=all --disable-libcilkrts --with-native-system-header-dir=/usr/include --enable-multiarch 2>&1 | tee log_build
+    $ ../master/configure --prefix="$PWD".install SHELL=/bin/dash CC=gcc-4.9 CXX=g++-4.9 --enable-languages=all --disable-libcilkrts --disable-libsanitizer --disable-libvtv --disable-libmpx --with-native-system-header-dir=/usr/include --enable-multiarch 2>&1 | tee log_build
     [...]
     $ make 2>&1 | tee log_build_
     [...]
 
 Different hosts may default to different shells and compiler versions; thus
 harmonized.
-`--disable-libcilkrts` until that is auto-detected/fixed for GNU Hurd.
+`--disable-libcilkrts`,
+`--disable-libmpx`,
+`--disable-libsanitizer`,
+`--disable-libvtv`,
+until these is auto-detected/fixed/ported for GNU Hurd.
 `--with-native-system-header-dir=/usr/include` because GCC still defaults to
 `/include` for GNU Hurd.  Explicit `--enable-multiarch` because *auto check [is
 disabled if] configured with --native-system-header-dir*.
 
-This takes up around 4.8 GiB, and runs for [[5 h 0 min|performance#measure]]
-on kepler.SCHWINGE and [[5 h 18 min|performance#measure]] on laplace.SCHWINGE.
+This takes up around 4.8 GiB, and runs for [[5 h 50 min|performance#measure]]
+on kepler.SCHWINGE and [[5 h 09 min|performance#measure]] on laplace.SCHWINGE.
 
 <!--
 
@@ -1244,7 +1248,7 @@ on kepler.SCHWINGE and [[5 h 18 min|performance#measure]] on laplace.SCHWINGE.
     [...]
 
 This takes up around 1.4 GiB, and runs for [[1 min|performance#measure]] on
-kepler.SCHWINGE and [[6 min|performance#measure]] on laplace.SCHWINGE.
+kepler.SCHWINGE and [[5 min|performance#measure]] on laplace.SCHWINGE.
 
 
 ## Analysis
@@ -1269,8 +1273,8 @@ kepler.SCHWINGE and [[6 min|performance#measure]] on laplace.SCHWINGE.
     $ make -k check 2>&1 | tee log_test
     [...]
 
-This runs for [[7 h 55 min|performance#measure]] on kepler.SCHWINGE and [[14 h
-02 min|performance#measure]] on laplace.SCHWINGE.
+This runs for [[8 h 30 min|performance#measure]] on kepler.SCHWINGE and [[14 h
+28 min|performance#measure]] on laplace.SCHWINGE.
 
 
 ## Analysis
@@ -1393,38 +1397,6 @@ This runs for [[7 h 55 min|performance#measure]] on kepler.SCHWINGE and [[14 h
     All have basically the same backtrace.  TODO.
 
   * `[ARCH]/libjava`
-
-    A few of the `Thread_Sleep_2 output` tests FAIL:
-
-        FAIL: Thread_Sleep_2 [...] output - source compiled test
-
-    That is because of:
-
-        spawn [open ...]
-        failed, iteration 1, time 9950000ns
-        failed, iteration 3, time 9950000ns
-        failed, iteration 5, time 9950000ns
-        failed, iteration 7, time 9950000ns
-        failed, iteration 9, time 9950000ns
-        failed, iteration 11, time 9950000ns
-        [...]
-
-    Source code is probably libjava.lang/Thread_Sleep_2.java:
-
-              for (int i = 0; i < 100; i++)
-                { 
-                  long start = System.nanoTime();
-                  Thread.sleep(10);
-                  long end = System.nanoTime();
-                  if ((end - start) < 10000000)
-                    { 
-                      System.out.print ("failed, iteration ");
-                      System.out.print (i);
-                      System.out.print (", time ");
-                      System.out.print (end - start);
-                      System.out.println ("ns");
-
-    TODO.
 
         spawn [open ...]
         1
