note trace/u to get userland backtrace

--- a/microkernel/mach/gnumach/debugging.mdwn
+++ b/microkernel/mach/gnumach/debugging.mdwn
@@ -45,11 +45,15 @@ Run the addr2line tool on the return addresses:
 
 This will print the source code lines of the backtrace.
 
+To get the userland backtrace of the thread, you can use
+
+    trace/u
+
 To examine the backtrace of some given thread, use
 
     show all thread/u
 
-to get the whole listing of all tasks and threads. You can then use trace/t to trace a specific thread.
+to get the whole listing of all tasks and threads. You can then use trace/t or trace/tu to trace a specific thread.
 
 Unfortunately, userland and kernelland use the same range of addresses, so one can not get userland traces easily. The Xen port uses different ranges, and in that case one can use trace/u to also get the userland trace.
 
