More FOSDEM 2016 notes, etc.

--- a/documentation.mdwn
+++ b/documentation.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2008, 2010, 2011, 2015 Free Software Foundation,
-Inc."]]
+[[!meta copyright="Copyright © 2008, 2010, 2011, 2015, 2016 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -86,6 +86,7 @@ from userlandish interfaces (Hurd) or from the micro kernel itself (Mach).
 
 ## 2016
 
+  * FOSDEM: {{$community/meetings/fosdem_2016#ragkousis_guix_hurd}}
   * FOSDEM: {{$community/meetings/fosdem_2016#thibault_hurd}}
 
 ## 2015
