--- a/hurd/running/nix.mdwn
+++ b/hurd/running/nix.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2012, 2013, 2014 Free Software Foundation,
+[[!meta copyright="Copyright © 2012, 2013, 2014, 2016 Free Software Foundation,
 Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -11,7 +11,7 @@ License|/fdl]]."]]"""]]
 
 [[!meta title="Nix-based GNU/Hurd System, Guix"]]
 
-[[!toc]]
+[[!toc levels=2]]
 
 
 # Nix
@@ -510,3 +510,8 @@ Nix, and because of that, it uses per-package installation directories under
     <ph4n70m4s> Any idea why is this happening?
     <braunr> ph4n70m4s: something is trying to compile as an x86-64 object,
       while the hurd is i386 only
+
+
+## FOSDEM 2016
+
+  * {{$community/meetings/fosdem_2016#ragkousis_guix_hurd}}
