--- a/media_appearances.mdwn
+++ b/media_appearances.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2010, 2011, 2012, 2013, 2015 Free Software
+[[!meta copyright="Copyright © 2010, 2011, 2012, 2013, 2015, 2016 Free Software
 Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
@@ -16,7 +16,19 @@ A lot of stuff is missing here.
 [[!toc levels=2]]
 
 
+# 2016
+
+## January
+
+  * FOSDEM: {{$community/meetings/fosdem_2016#ragkousis_guix_hurd}}
+  * FOSDEM: {{$community/meetings/fosdem_2016#thibault_hurd}}
+
+
 # 2015
+
+## August
+
+  * Debconf 15: {{$community/meetings/debconf15#youpi_hurd}}
 
 ## February
 
