--- a/community/gsoc.mdwn
+++ b/community/gsoc.mdwn
@@ -16,9 +16,11 @@ The Google Summer of Code 2014 is over.  Chances are that we will again be
 participating in 2015, stay tuned.
 -->
 
+<!--
 We're in!  The GNU Hurd project is again participating in the [Google Summer of
 Code](http://www.google-melange.com/) under the [GNU
 umbrella](http://www.gnu.org/software/soc-projects/).
+-->
 
 <!--
 This year's *student application period* is over.  Thanks for sending in your
@@ -106,4 +108,4 @@ participated on our own, instead of as a suborganization of the GNU project.
 Read about our five students' success on the [[2008]] page.  In the next years,
 we again participated under the GNU umbrella with one slot in [[2009]], three
 in [[2010]], one in [[2011]], two in [[2012]], three in [[2013]] (one GNU, one
-GCC, one Debian), one in [[2014]].
+GCC, one Debian), one in [[2014]], two in [[2015]].
