--- a/community/gsoc/project_ideas.mdwn
+++ b/community/gsoc/project_ideas.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015
-Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2008, 2009, 2010, 2011, 2012, 2013, 2014, 2015,
+2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -97,9 +97,13 @@ All project ideas inlined:
 
 project_ideas:
 
-  "community/gsoc/project_ideas/physical_memory_management
+  "community/gsoc/project_ideas/virtualization
+  community/gsoc/project_ideas/secure_chroot
+  community/gsoc/project_ideas/package_manager
+  community/gsoc/project_ideas/xattr
+  community/gsoc/project_ideas/driver_glue_code
+  community/gsoc/project_ideas/physical_memory_management
   community/gsoc/project_ideas/language_bindings
-  community/gsoc/project_ideas/virtualization
   community/gsoc/project_ideas/file_locking
   community/gsoc/project_ideas/gdb
   community/gsoc/project_ideas/tcp_ip_stack
@@ -110,8 +114,6 @@ project_ideas:
   community/gsoc/project_ideas/xmlfs
   community/gsoc/project_ideas/unionfs_boot
   community/gsoc/project_ideas/lexical_dot-dot
-  community/gsoc/project_ideas/secure_chroot
-  community/gsoc/project_ideas/package_manager
   community/gsoc/project_ideas/download_backends
   community/gsoc/project_ideas/maxpath
   community/gsoc/project_ideas/gnat
@@ -122,9 +124,7 @@ project_ideas:
   community/gsoc/project_ideas/testsuites
   community/gsoc/project_ideas/testing_framework
   community/gsoc/project_ideas/libcap
-  community/gsoc/project_ideas/xattr
   community/gsoc/project_ideas/valgrind
-  community/gsoc/project_ideas/driver_glue_code
   community/gsoc/project_ideas/dtrace
   community/gsoc/project_ideas/libdiskfs_locking"
 
