--- a/community/gsoc/project_ideas/xattr.mdwn
+++ b/community/gsoc/project_ideas/xattr.mdwn
@@ -1,4 +1,4 @@
-[[!meta copyright="Copyright © 2009 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2009, 2016 Free Software Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -41,7 +41,7 @@ with xattrs might help a bit, but shouldn't be really necessary either.
 Some previous work on xattr support is [[available|open_issues/xattr]], and
 might serve as a starting point.
 
-Possible mentors: Samuel Thibault (youpi)
+Possible mentors: Justus Winter (teythoon), Samuel Thibault (youpi)
 
 Exercise: Implement support for different inode sizes (other than 128 bytes) in
 Hurd's ext2fs.
