--- a/community/gsoc/project_ideas/driver_glue_code.mdwn
+++ b/community/gsoc/project_ideas/driver_glue_code.mdwn
@@ -1,4 +1,5 @@
-[[!meta copyright="Copyright © 2008, 2009, 2010, 2011 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2008, 2009, 2010, 2011, 2016 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -66,8 +67,15 @@ To be able to work on the framework,
 the student will also have to get a good understanding of certain aspects of Hurd,
 such as memory management for example.
 
-Possible mentors: Zheng Da, Samuel Thibault (youpi)
+Possible mentors: Justus Winter (teythoon), Samuel Thibault (youpi)
 
 Exercise: Get one of the not yet integrated Linux network card drivers to work.
 (Note: This should be straightforward,
 once you have the framework properly built and set up...)
+
+---
+
+
+# 2016-02-14, Justus Winter
+
+`s/dde/rump/g` of course.
