--- a/community/gsoc/project_ideas/package_manager.mdwn
+++ b/community/gsoc/project_ideas/package_manager.mdwn
@@ -1,5 +1,5 @@
-[[!meta copyright="Copyright © 2008, 2009, 2013, 2014 Free Software Foundation,
-Inc."]]
+[[!meta copyright="Copyright © 2008, 2009, 2013, 2014, 2016 Free Software
+Foundation, Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -53,7 +53,7 @@ Guix|hurd/running/nix#guix]].
 See also: [Porting Guix to
 GNU/Hurd](http://www.gnu.org/software/soc-projects/ideas-2014.html#guix_hurd).
 
-Possible mentors: Ludovic Courtès, Ben Asselstine (bing)
+Possible mentors: Justus Winter (teythoon), Ludovic Courtès
 
 Exercise: Make some improvement to any of the existing Hurd translators.
 Especially those in [hurdextras](http://www.nongnu.org/hurdextras/) are often
