--- a/community/gsoc/project_ideas/virtualization.mdwn
+++ b/community/gsoc/project_ideas/virtualization.mdwn
@@ -1,4 +1,5 @@
-[[!meta copyright="Copyright © 2008, 2009 Free Software Foundation, Inc."]]
+[[!meta copyright="Copyright © 2008, 2009, 2016 Free Software Foundation,
+Inc."]]
 
 [[!meta license="""[[!toggle id="license" text="GFDL 1.2+"]][[!toggleable
 id="license" text="Permission is granted to copy, distribute and/or modify this
@@ -73,4 +74,11 @@ Completing this project will require gaining a very good understanding of the
 Hurd architecture and spirit. Previous experience with other virtualization
 solutions would be very helpful.
 
-Possible mentors: Olaf Buddenhagen (antrik), Carl Fredrik Hammar (cfhammar)
+Possible mentors: Justus Winter (teythoon)
+
+---
+
+
+# 2016-02-14, Justus Winter
+
+I have a unprivileged-subhurds prototype that "just" needs finishing.
